--- a/navbar.html
+++ b/navbar.html
@@ -3,35 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hololive Production</title>
-    <link rel="stylesheet" href="home.css">
+    <title>Floating Left Navbar</title>
+    <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
-    <header>
-        <div class="bg-vid">
-            <video autoplay muted loop src="assets/《hololive 6th fes. Color Rise Harmony》PV - hololive ホロライブ - VTuber Group (720p, h264).mp4"></video>
-        </div>
-        <div class="hololive-img">
-            <a href="https://hololive.hololivepro.com/en">
-            <img src="assets/Hololive-2017-Logo.png" height="85">
-            </a>
-        </div>
-        <div class="navbar">
-            <nav>
-                <ul>
-                    <li><a href="home.html">HOME</a></li>
-                    <li><a href="index.html" target="_blank" class="active">TALENTS</a></li>
-                    <li><a href="index.html">NEWS</a></li>
-                    <li><a href="index.html">ABOUT</a></li>
-                    <li><a href="music.html">MUSIC</a></li>
-                    <li><a href="index.html">MERCH</a></li>
-                    <li><a href="#">日本語</a></li>
-                </ul>
-            </nav>
 
-        </div>
+    <nav class="sidebar">
+        <div class="logo">Logo</div>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
 
-    </header>
+    <div class="content">
+        <h1>Scroll Down to See the Navbar Shrink</h1>
+        <p>Lorem ipsum dolor sit amet...</p>
+        <p style="height: 1500px;">(Add more content to enable scrolling)</p>
+    </div>
     <main>
         <section class="section1">
             <div class="section1-h1">
@@ -82,18 +73,19 @@
             </div>
         </section>
     </main>
-    <script>
-        window.addEventListener("scroll", function() {
-    let navbar = document.querySelector(".navbar");
 
-    if (window.scrollY > 50) {
-        navbar.classList.add("shrink");
-    } else {
-        navbar.classList.remove("shrink");
-    }
-});
+    <script>
+        window.addEventListener("scroll", function () {
+                let navbar = document.querySelector(".sidebar");
+
+                if (window.scrollY > 50) {
+                    navbar.classList.add("shrink");
+                } else {
+                    navbar.classList.remove("shrink");
+                }
+            });
 
     </script>
-    
+
 </body>
 </html>
